Feat: check_dead 함수에 exit(1) 추가

--- a/3_Philosopher/philo_bonus/Makefile
+++ b/3_Philosopher/philo_bonus/Makefile
@@ -2,7 +2,7 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror 
 SRC = main.c print_bonus.c setting_bonus.c simulation_bonus.c utils_bonus.c
 OBJ = $(SRC:.c=.o)
-NAME = philo
+NAME = philo_bonus
 
 .phony: all clean fclean re
 
