[feat]: ex01 멤버 함수로 코드 다 빼주었다

--- a/4_cpp_module/cpp00/ex01/Makefile
+++ b/4_cpp_module/cpp00/ex01/Makefile
@@ -1,7 +1,7 @@
 CPP = c++
 CFLAGS = -Wall -Wextra -Werror
-SRC = phone_book.cpp contact.cpp main.cpp
-OBJ = phone_book.o contact.o main.o
+SRC = PhoneBook.cpp Contact.cpp main.cpp
+OBJ = PhoneBook.o Contact.o main.o
 MAIN = phonebook
 
 .PHONY: all clean fclean re
