[feat]: cpp01 ex04, 06제외하고 거의 다 마무리

--- a/4_cpp_module/.vscode/settings.json
+++ b/4_cpp_module/.vscode/settings.json
@@ -65,6 +65,10 @@
 		"clocale": "cpp",
 		"variant": "cpp",
 		"compare": "cpp",
-		"concepts": "cpp"
+		"concepts": "cpp",
+		"deque": "cpp",
+		"fstream": "cpp",
+		"iomanip": "cpp",
+		"stack": "cpp"
 	}
 }
