[feat]: makefile 추가

--- a/4_cpp_module/cpp02/ex00/Makefile
+++ b/4_cpp_module/cpp02/ex00/Makefile
@@ -1,9 +1,9 @@
 CXX = c++
 CXXFLAGS = -std=c++98 -Wall -Wextra -Werror
 SRC =	main.cpp \
-		Fixed.cpp \
+		Fixed.cpp
 OBJ = 	main.o \
-		Fixed.o \
+		Fixed.o
 MAIN = Fixed
 
 .PHONY: all clean fclean re
