--- a/4_cpp_module/cpp04/ex00/Makefile
+++ b/4_cpp_module/cpp04/ex00/Makefile
@@ -3,10 +3,14 @@ CXXFLAGS= -std=c++98 -Wall -Wextra -Werror
 SRC=	Animal.cpp \
 		Cat.cpp \
 		Dog.cpp \
+		WrongAnimal.cpp \
+		WrongCat.cpp \
 		main.cpp
 OBJ=	Animal.o \
 		Cat.o \
 		Dog.o \
+		WrongAnimal.o \
+		WrongCat.o \
 		main.o
 MAIN=Animal
 
