[refact]: 형식에 맞게 실행파일 이름 고쳐줌

--- a/5_cpp_module/cpp06/ex00/Makefile
+++ b/5_cpp_module/cpp06/ex00/Makefile
@@ -4,7 +4,7 @@ SRC=	main.cpp \
 		ScalarConverter.cpp
 OBJ=	main.o \
 		ScalarConverter.o
-MAIN=ScalarConverter
+MAIN=convert
 
 .PHONY: all clean fclean re
 
