--- a/5_cpp_module/.vscode/settings.json
+++ b/5_cpp_module/.vscode/settings.json
@@ -59,6 +59,18 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"__bits": "cpp",
+		"__verbose_abort": "cpp",
+		"clocale": "cpp",
+		"deque": "cpp",
+		"fstream": "cpp",
+		"iomanip": "cpp",
+		"stack": "cpp",
+		"variant": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"filesystem": "cpp",
+		"queue": "cpp"
 	}
 }
