--- a/5_cpp_module/cpp09/.vscode/settings.json
+++ b/5_cpp_module/cpp09/.vscode/settings.json
@@ -33,7 +33,7 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "deque": "cpp",
+        "vector": "cpp",
         "exception": "cpp",
         "fstream": "cpp",
         "initializer_list": "cpp",
