[feat]: pending에 나머지 element도 들어가도록

--- a/5_cpp_module/cpp09/.vscode/settings.json
+++ b/5_cpp_module/cpp09/.vscode/settings.json
@@ -61,13 +61,13 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
-        "vector": "cpp",
         "__nullptr": "cpp",
         "__string": "cpp",
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
         "algorithm": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "deque": "cpp"
     }
 }
