--- a/5_cpp_module/cpp09/.vscode/settings.json
+++ b/5_cpp_module/cpp09/.vscode/settings.json
@@ -68,6 +68,7 @@
         "concepts": "cpp",
         "algorithm": "cpp",
         "list": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "functional": "cpp"
     }
 }
