Feat: wordpress에 관련된거 설정

--- a/5_inception/srcs/.env
+++ b/5_inception/srcs/.env
@@ -1,9 +1,6 @@
 DOMAIN_NAME=seojchoi.42.fr
 
-# certificates
-# CERTS_=./XXXXXXXXXXXX
-
-# MYSQL SETUP
-MYSQL_ROOT_PASSWORD=seojchoi
-MYSQL_USER=root
+# MYSQL
+MYSQL_USER=seojchoi
 MYSQL_PASSWORD=seojchoi
+MYSQL_ROOT_PASSWORD=seojchoi
