--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -17,6 +17,14 @@ http {
 		location / {
 			root	html;
 			index	index.html index.htm;
+			# try_files $uri $uri/ /index.php?$args;
 		}
+
+		# location ~ \.php$ {
+		# 	include fastcgi_params;
+		# 	fastcgi_pass wordpress:9000;
+		# 	fastcgi_index index.php;
+		# 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		# }
 	}
 }
