--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -10,21 +10,13 @@ http {
 		server_name	seojchoi.42.fr;
 
 		# ssl
-		ssl_certificate /etc/nginx/ssl/seojchoi.crt;   # 인증서 파일
-		ssl_certificate_key /etc/nginx/ssl/seojchoi.key;   # 개인키
+		ssl_certificate /etc/nginx/ssl/seojchoi.crt;
+		ssl_certificate_key /etc/nginx/ssl/seojchoi.key;
 		ssl_protocols TLSv1.1 TLSV1.2;
 
 		location / {
 			root	html;
 			index	index.html index.htm;
-			# try_files $uri $uri/ /index.php?$args;
 		}
-
-		# location ~ \.php$ {
-		# 	include fastcgi_params;
-		# 	fastcgi_pass wordpress:9000;
-		# 	fastcgi_index index.php;
-		# 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		# }
 	}
 }
