feat: wordpress 설정 추가

--- a/5_inception/srcs/docker-compose.yml
+++ b/5_inception/srcs/docker-compose.yml
@@ -23,6 +23,16 @@ services:
     networks:
       - network
 
+  wordpress:
+    container_name: wordpress
+    build:
+      context: ./requirements/wordpress
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    networks:
+      - network
+
 # volumes:
 #   mariadb_data:
 
