feat: nginx config 설정

--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -3,8 +3,6 @@ events {
 }
 
 http {
-
-	# https
 	server {
 		listen		443 ssl;
 		server_name	seojchoi.42.fr;
@@ -14,9 +12,20 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/seojchoi.key;
 		ssl_protocols TLSv1.1 TLSV1.2;
 
+		root	/var/www/html;
+		index	index.html index.htm index.php;
+
+		# 정적 파일
 		location / {
-			root	html;
-			index	index.html index.htm;
+			try_files $uri $uri/ =404;
+		}
+
+		# PHP 처리
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+            fastcgi_pass wordpress:9000;
+            fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
+			include fastcgi_params;
 		}
 	}
 }
