--- a/5_inception/srcs/docker-compose.yml
+++ b/5_inception/srcs/docker-compose.yml
@@ -10,8 +10,6 @@ services:
       - .env
     networks:
       - network
-    # volumes:
-    #   - mariadb_data: /var/lib/mysql
 
   nginx:
     container_name: nginx
@@ -22,6 +20,8 @@ services:
       - "443:443"
     networks:
       - network
+    volumes:
+      - wordpress_data:/var/www/html:ro
 
   wordpress:
     container_name: wordpress
@@ -32,9 +32,11 @@ services:
       - .env
     networks:
       - network
+    volumes:
+      - wordpress_data:/var/www/html
 
-# volumes:
-#   mariadb_data:
+volumes:
+  wordpress_data: {}
 
 networks:
   network:
