--- a/5_inception/srcs/requirements/mariadb/Dockerfile
+++ b/5_inception/srcs/requirements/mariadb/Dockerfile
@@ -2,9 +2,9 @@ FROM debian:bullseye
 
 RUN apt-get update -y && \
     apt-get upgrade -y && \
-    apt-get -y install mariadb-server &&\
-    mkdir -p /run/mysqld && \
-    chown -R mysql:mysql /run/mysqld
+    apt-get -y install mariadb-server
+    # mkdir -p /run/mysqld && \
+    # chown -R mysql:mysql /run/mysqld
 
 EXPOSE 3306
 
