--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -17,14 +17,14 @@ http {
 
 		# 정적 파일
 		location / {
-			try_files $uri $uri/ =404;
+			try_files $uri $uri/ /index.php?$args;
 		}
 
 		# PHP 처리
 		location ~ \.php$ {
 			include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
-            fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			include fastcgi_params;
 		}
 	}
