--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -15,6 +15,16 @@ http {
 		root	/var/www/html;
 		index	index.html index.htm index.php;
 
+		access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+
+		# location / {
+		# 	proxy_pass http://wordpress:9000;
+		# 	proxy_set_header Host $host;
+		# 	proxy_set_header X-Real-IP $remote_addr;
+		# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	# }
+
 		# 정적 파일
 		location / {
 			try_files $uri $uri/ /index.php?$args;
@@ -29,3 +39,4 @@ http {
 		}
 	}
 }
+
