feat: makefile, docker-compose.yml 수정

--- a/5_inception/Makefile
+++ b/5_inception/Makefile
@@ -11,3 +11,7 @@ down:
 re: clean all
 
 clean: down
+	rm -rf /home/seojchoi/data/mysql/*
+	rm -rf /home/seojchoi/data/wordpress/*
+	docker volume remove srcs_maridadb_data
+	docker volume remove srcs_wordpress_data
