--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -10,10 +10,10 @@ http {
 		# ssl
 		ssl_certificate /etc/nginx/ssl/seojchoi.crt;
 		ssl_certificate_key /etc/nginx/ssl/seojchoi.key;
-		ssl_protocols TLSv1.1 TLSV1.2;
+		ssl_protocols TLSv1.3 TLSV1.2;
 
 		root	/var/www/html;
-		index	index.html index.htm index.php;
+		index	index.php index.css;
 
 		access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
