--- a/5_inception/srcs/docker-compose.yml
+++ b/5_inception/srcs/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - network
     volumes:
       - mariadb_data:/var/lib/mysql
+    restart:  on-failure
+    init: true
 
   nginx:
     depends_on:
@@ -28,6 +30,8 @@ services:
       - network
     volumes:
       - wordpress_data:/var/www/html
+    restart:  on-failure
+    init: true
 
   wordpress:
     depends_on:
@@ -44,6 +48,8 @@ services:
       - network
     volumes:
       - wordpress_data:/var/www/html
+    restart:  on-failure
+    init: true
 
 volumes:
   wordpress_data:
