--- a/5_inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/5_inception/srcs/requirements/nginx/conf/nginx.conf
@@ -3,6 +3,9 @@ events {
 }
 
 http {
+	include mime.types;
+    default_type application/octet-stream;
+
 	server {
 		listen		443 ssl;
 		server_name	seojchoi.42.fr;
@@ -18,16 +21,9 @@ http {
 		access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
-		# location / {
-		# 	proxy_pass http://wordpress:9000;
-		# 	proxy_set_header Host $host;
-		# 	proxy_set_header X-Real-IP $remote_addr;
-		# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    	# }
-
 		# 정적 파일
 		location / {
-			try_files $uri $uri/ /index.php?$args;
+			try_files $uri $uri/ /index.php$is_args$args;
 		}
 
 		# PHP 처리
