--- a/5_inception/srcs/requirements/nginx/Dockerfile
+++ b/5_inception/srcs/requirements/nginx/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update -y && \
     apt-get upgrade -y && \
     apt-get -y install nginx openssl
 
+RUN apt-get update && apt-get install -y dumb-init
+
 RUN mkdir -p /etc/nginx/ssl && \
     openssl genpkey -algorithm RSA -out /etc/nginx/ssl/seojchoi.key -pkeyopt rsa_keygen_bits:2048 && \
     openssl req -new -x509 -key /etc/nginx/ssl/seojchoi.key -out /etc/nginx/ssl/seojchoi.crt -days 365 \
@@ -13,4 +15,4 @@ EXPOSE 443
 
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["dumb-init", "nginx", "-g", "daemon off;"]
