feat: DATA_PATH make file 안에서 정의

--- a/5_inception/Makefile
+++ b/5_inception/Makefile
@@ -1,6 +1,7 @@
 .PHONY: all down
 
 DOCKER_COMPOSE_PATH = ./srcs/docker-compose.yml
+DATA_PATH = /Users/seoji/data
 
 all:
 	docker compose -f ${DOCKER_COMPOSE_PATH} up -d --build
